# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-961b4c22/example-961b4c22-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_961b4c22"]
        
        [project]
        name = "example-961b4c22"
        version = "0.0.0"
        dependencies = [
            '''example-a-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/src/example_961b4c22/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_961b4c22"]
        
        [project]
        name = "example-a-961b4c22"
        version = "1.0.0"
        dependencies = [
            '''example-b-961b4c22>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/src/example_a_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "3.0.0"
        dependencies = [
            '''example-c-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-961b4c22/example_961b4c22-0.0.0.tar.gz': 'md5:50500dbebf471373976c812752281082',
      'dist/example-961b4c22/example_a_961b4c22-1.0.0-py3-none-any.whl': 'md5:b08225196dab082ef56cfd200be09e0c',
      'dist/example-961b4c22/example_a_961b4c22-1.0.0.tar.gz': 'md5:d5b206e5473bbc4625cfd2a0635c14ee',
      'dist/example-961b4c22/example_b_961b4c22-1.0.0-py3-none-any.whl': 'md5:d5671062b6263efec113c4a48722e3f8',
      'dist/example-961b4c22/example_b_961b4c22-1.0.0.tar.gz': 'md5:1a5b78e5effdddfb166da60f3765542e',
      'dist/example-961b4c22/example_b_961b4c22-2.0.0-py3-none-any.whl': 'md5:1af716031481e9892c3043c65b315688',
      'dist/example-961b4c22/example_b_961b4c22-2.0.0.tar.gz': 'md5:d6ef5021da7cd4275188bd8d086d5229',
      'dist/example-961b4c22/example_b_961b4c22-3.0.0-py3-none-any.whl': 'md5:9d6c858ff25fa695b68a09914fd5f0de',
      'dist/example-961b4c22/example_b_961b4c22-3.0.0.tar.gz': 'md5:f97684a46574b1d9d4209fb639a5c660',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-961b4c22
        │       ├── example-961b4c22-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_961b4c22
        │       │           └── __init__.py
        │       ├── example-a-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_961b4c22
        │       │           └── __init__.py
        │       ├── example-b-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_961b4c22
        │       │           └── __init__.py
        │       ├── example-b-961b4c22-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_961b4c22
        │       │           └── __init__.py
        │       └── example-b-961b4c22-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_961b4c22
        │                   └── __init__.py
        └── dist
            └── example-961b4c22
                ├── example_961b4c22-0.0.0.tar.gz
                ├── example_a_961b4c22-1.0.0-py3-none-any.whl
                ├── example_a_961b4c22-1.0.0.tar.gz
                ├── example_b_961b4c22-1.0.0-py3-none-any.whl
                ├── example_b_961b4c22-1.0.0.tar.gz
                ├── example_b_961b4c22-2.0.0-py3-none-any.whl
                ├── example_b_961b4c22-2.0.0.tar.gz
                ├── example_b_961b4c22-3.0.0-py3-none-any.whl
                └── example_b_961b4c22-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-961b4c22
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-961b4c22
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-961b4c22' in directory '[PWD]/build/example-961b4c22'
      Destination directory '[PWD]/build/example-961b4c22' already exists. Pass `--force` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 2,
    'stderr': '<not included>',
    'stdout': '',
  })
# ---
# name: test_build_example_short_names
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-961b4c22/a-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/a-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/a_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/a_961b4c22"]
        
        [project]
        name = "a-961b4c22"
        version = "1.0.0"
        dependencies = [
            '''b-961b4c22>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/a-961b4c22-1.0.0/src/a_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/b-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/b-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_961b4c22"]
        
        [project]
        name = "b-961b4c22"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/b-961b4c22-1.0.0/src/b_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/b-961b4c22-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/b-961b4c22-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_961b4c22"]
        
        [project]
        name = "b-961b4c22"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/b-961b4c22-2.0.0/src/b_961b4c22/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-961b4c22/b-961b4c22-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/b-961b4c22-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_961b4c22"]
        
        [project]
        name = "b-961b4c22"
        version = "3.0.0"
        dependencies = [
            '''c-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/b-961b4c22-3.0.0/src/b_961b4c22/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_961b4c22"]
        
        [project]
        name = "example-961b4c22"
        version = "0.0.0"
        dependencies = [
            '''a-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/src/example_961b4c22/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-961b4c22/a_961b4c22-1.0.0-py3-none-any.whl': 'md5:71835d4655093021b26881ed536d6a3c',
      'dist/example-961b4c22/a_961b4c22-1.0.0.tar.gz': 'md5:5e4419947505c407666321769ae37b6f',
      'dist/example-961b4c22/b_961b4c22-1.0.0-py3-none-any.whl': 'md5:87a6833860657a740cfc3dd6c33ed6c0',
      'dist/example-961b4c22/b_961b4c22-1.0.0.tar.gz': 'md5:9ba9d4c05c2cfc71d316a724bcee9941',
      'dist/example-961b4c22/b_961b4c22-2.0.0-py3-none-any.whl': 'md5:827509625d3d713b04592c1e81650507',
      'dist/example-961b4c22/b_961b4c22-2.0.0.tar.gz': 'md5:3f0d5cc2ca6029de28220d81a67fdcd6',
      'dist/example-961b4c22/b_961b4c22-3.0.0-py3-none-any.whl': 'md5:03b775c2e2c672d972ab6c9780508b31',
      'dist/example-961b4c22/b_961b4c22-3.0.0.tar.gz': 'md5:9319bd71ba7767b4c445e5642af84f41',
      'dist/example-961b4c22/example_961b4c22-0.0.0.tar.gz': 'md5:7c52a2c4677494a1f90f5017f85273e4',
      'tree': '''
        test_build_example_short_names0
        ├── build
        │   └── example-961b4c22
        │       ├── a-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── a_961b4c22
        │       │           └── __init__.py
        │       ├── b-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_961b4c22
        │       │           └── __init__.py
        │       ├── b-961b4c22-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_961b4c22
        │       │           └── __init__.py
        │       ├── b-961b4c22-3.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_961b4c22
        │       │           └── __init__.py
        │       └── example-961b4c22-0.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_961b4c22
        │                   └── __init__.py
        └── dist
            └── example-961b4c22
                ├── a_961b4c22-1.0.0-py3-none-any.whl
                ├── a_961b4c22-1.0.0.tar.gz
                ├── b_961b4c22-1.0.0-py3-none-any.whl
                ├── b_961b4c22-1.0.0.tar.gz
                ├── b_961b4c22-2.0.0-py3-none-any.whl
                ├── b_961b4c22-2.0.0.tar.gz
                ├── b_961b4c22-3.0.0-py3-none-any.whl
                ├── b_961b4c22-3.0.0.tar.gz
                └── example_961b4c22-0.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-961b4c22
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-7661fdb8/example-7661fdb8-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-7661fdb8-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_7661fdb8"]
        
        [project]
        name = "example-7661fdb8"
        version = "0.0.0"
        dependencies = [
            '''example-a-7661fdb8''',
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-7661fdb8-0.0.0/src/example_7661fdb8/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-7661fdb8/example-a-7661fdb8-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-a-7661fdb8-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_7661fdb8"]
        
        [project]
        name = "example-a-7661fdb8"
        version = "1.0.0"
        dependencies = [
            '''example-b-7661fdb8>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-a-7661fdb8-1.0.0/src/example_a_7661fdb8/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_7661fdb8"]
        
        [project]
        name = "example-b-7661fdb8"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-1.0.0/src/example_b_7661fdb8/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_7661fdb8"]
        
        [project]
        name = "example-b-7661fdb8"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-2.0.0/src/example_b_7661fdb8/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_7661fdb8"]
        
        [project]
        name = "example-b-7661fdb8"
        version = "3.0.0"
        dependencies = [
            '''example-c-7661fdb8''',
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-3.0.0/src/example_b_7661fdb8/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-7661fdb8/example_7661fdb8-0.0.0.tar.gz': 'md5:a7d08c4c6d67ea155e60aa4dca1d4f02',
      'dist/example-7661fdb8/example_a_7661fdb8-1.0.0-py3-none-any.whl': 'md5:2bffa37b533d8bd7305ef4c35f2e1eaa',
      'dist/example-7661fdb8/example_a_7661fdb8-1.0.0.tar.gz': 'md5:72ff3160331e769af9ca18f8e5556521',
      'dist/example-7661fdb8/example_b_7661fdb8-1.0.0-py3-none-any.whl': 'md5:e28d01bec9f17c084c41faae02beb5b2',
      'dist/example-7661fdb8/example_b_7661fdb8-1.0.0.tar.gz': 'md5:30555584f112a9476b36fa69b588a32b',
      'dist/example-7661fdb8/example_b_7661fdb8-2.0.0-py3-none-any.whl': 'md5:0382ed0f92262b84e41d8a172d117484',
      'dist/example-7661fdb8/example_b_7661fdb8-2.0.0.tar.gz': 'md5:b87e755e31b565d48830d77ae95ae803',
      'dist/example-7661fdb8/example_b_7661fdb8-3.0.0-py3-none-any.whl': 'md5:00ec1e77f1d74ba49814a30ac3b92e99',
      'dist/example-7661fdb8/example_b_7661fdb8-3.0.0.tar.gz': 'md5:14aa3376162ccb7d9c6bb5156cd8fe10',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-7661fdb8
        │       ├── example-7661fdb8-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_7661fdb8
        │       │           └── __init__.py
        │       ├── example-a-7661fdb8-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_7661fdb8
        │       │           └── __init__.py
        │       ├── example-b-7661fdb8-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_7661fdb8
        │       │           └── __init__.py
        │       ├── example-b-7661fdb8-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_7661fdb8
        │       │           └── __init__.py
        │       └── example-b-7661fdb8-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_7661fdb8
        │                   └── __init__.py
        └── dist
            └── example-7661fdb8
                ├── example_7661fdb8-0.0.0.tar.gz
                ├── example_a_7661fdb8-1.0.0-py3-none-any.whl
                ├── example_a_7661fdb8-1.0.0.tar.gz
                ├── example_b_7661fdb8-1.0.0-py3-none-any.whl
                ├── example_b_7661fdb8-1.0.0.tar.gz
                ├── example_b_7661fdb8-2.0.0-py3-none-any.whl
                ├── example_b_7661fdb8-2.0.0.tar.gz
                ├── example_b_7661fdb8-3.0.0-py3-none-any.whl
                └── example_b_7661fdb8-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-7661fdb8
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--force] [--short-names] [--no-hash] [--skip-root]
                          [-v] [-q]
                          targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
